# hasami_shogi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check_dll.py  requirements.txt  run.py  setup.py  test_dll.py
.github/workflows/: build.yml
src/: python_bindings.cpp
src/core/include/: ai.hpp  board.hpp  game.hpp  move.hpp
src/core/src/: ai.cpp  board.cpp  game.cpp  move.cpp
src/gui/: __init__.py  board_widget.py  game_window.py  main.py  settings_dialog.py
src/gui/lib/: hasami_shogi.pyd
tests/cpp/: test_ai.cpp  test_board.cpp  test_game.cpp
tests/python/: test_gui.py  test_integration.py
